--- a/metadata.yaml
+++ b/metadata.yaml
@@ -26,5 +26,6 @@ rights_url: http://creativecommons.org/about/pdm
 subjects:
 - !lcc 'DP'
 - !lcsh 'Spain -- History'
+- GITenberg
 title: A Short History of Spain
 url: http://www.gutenberg.org/ebooks/29197
